# desiforecast

./: .coveragerc  .env.example  .gitattributes  .gitignore  LICENSE  LICENSE.rst  README.md  README.rst  neural_network.py  pyproject.toml  query_database.py  requirements.txt  setup.py
.github/workflows/: lint.yml
data/: environmentmonitor_dome.pkl  etc_seeing.pkl  etc_telemetry.pkl  query_database.py  resampled_dome_data.pkl  resampled_tcs_data.pkl  resampled_tower_data.pkl  tcs_info.pkl
data/correlation/: correlation.ipynb
data/time_sync/: time_sync.ipynb
doc/: api.rst  changes.rst  conf.py  index.rst
doc/nb/: astropy_tests.ipynb  correlation_plots.ipynb  pytorch_tests.ipynb  time_plots.ipynb
old_stuff/notebooks/: astropy_tests.ipynb
py/desiforecast/: __init__.py  main.py  neural_network.py  query_database.py
py/desiforecast/data/: ambient_distributions.pkl  ambient_distributions_daytime.pkl  ambient_distributions_nighttime.pkl  delta_distributions.pkl  delta_distributions_daytime.pkl  delta_distributions_nighttime.pkl  distr_summary_data_daytime.pkl  distr_summary_data_nighttime.pkl  environmentmonitor_dome.fits  environmentmonitor_dome.pkl  environmentmonitor_telescope.fits  environmentmonitor_telescope.pkl  environmentmonitor_tower.fits  environmentmonitor_tower.pkl  etc_seeing.fits  etc_seeing.pkl  etc_telemetry.fits  etc_telemetry.pkl  neural_network_data.pkl  neural_network_model.pt  percent_ideal_daytime.pkl  percent_ideal_nighttime.pkl  (+6 more)
src/mirror_temperature/: __main__.py  query_database.py  settings.py
time_sync/: time_sync.ipynb
(+5 files in other folders)
